@@ -63,7 +63,7 @@
     <language>en</language>
     <platform>all</platform>
     <summary lang="en">Jornais/Revistas</summary>
-    <description lang="en">LÃª os teus jornais/revistas favoritos!</description>
+    <description lang="en">Lê os teus jornais/revistas favoritos!</description>
     <platform>all</platform>
   </extension>
 </addon>
@@ -152,7 +152,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.5" provider-name="Anonymous">
+<addon id="plugin.video.xbmctools" name="K0di Tools" version="1.1.6" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
@@ -164,7 +164,7 @@
   <extension point="xbmc.addon.metadata">
     <language>en</language>
     <platform>all</platform>
-    <summary lang="en">XBMC Tools</summary>
+    <summary lang="en">K0di Tools</summary>
     <description lang="pt">Algumas ferramentas necessarias.
 
 	FAQ: http://goo.gl/9S2CD3 </description>
