@@ -65,4 +65,6 @@
 	<string id="2061">Deseja actualizar?</string>
 	<string id="2062">Tempo até o hack ser aplicado</string>
 	<string id="2063">Apagar Backup</string>
+	<string id="2064">Definições do addon</string>
+	<string id="2065">Forçar shutdown (Win/Linux/OSx)</string>
 </strings>
